log
Thu Mar 26 06:59:46 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
72cd354
Thu Mar 26 07:00:36 PM UTC 2026: 
 list.c | 89 +++++++++++++++++++++++++++++++++++++++++++++++-------------------
 1 file changed, 64 insertions(+), 25 deletions(-)
 tests:  12|0
total_score: 60/60
7d152e8
Thu Mar 26 07:02:06 PM UTC 2026: 
 tests:  12|0
total_score: 60/60
b96e3ea
Thu Mar 26 07:15:50 PM UTC 2026: 
 list.c | 71 +++++++-----------------------------------------------------------
 1 file changed, 7 insertions(+), 64 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:73:10: error: variable or field ‘dato’ declared void
   73 |     void dato = list -> current -> data;
      |          ^~~~
list.c:73:17: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   73 |     void dato = list -> current -> data;
      |                 ^~~~
list.c:74:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   74 |     return *dato;
      |            ^~~~~
list.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
   75 | }
      | ^
cc1: all warnings being treated as errors
dd8329e
Thu Mar 26 07:16:06 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:74:12: error: dereferencing ‘void *’ pointer [-Werror]
   74 |     return *dato;
      |            ^~~~~
list.c:74:12: error: void value not ignored as it ought to be
list.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
   75 | }
      | ^
cc1: all warnings being treated as errors
1cd6750
Thu Mar 26 07:16:27 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
e7b8c5c
Thu Mar 26 07:21:19 PM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
b71203f
Thu Mar 26 07:22:17 PM UTC 2026: 
 tests:  0|0
ec684c2
Thu Mar 26 07:26:10 PM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
7d0d2a7
Thu Mar 26 07:26:52 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/60
4ddb5b4
Thu Mar 26 07:27:14 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:77:9: error: ‘head’ undeclared (first use in this function)
   77 |         head -> prev = NULL;
      |         ^~~~
list.c:77:9: note: each undeclared identifier is reported only once for each function it appears in
6708585
Thu Mar 26 07:27:24 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
575ecf0
Thu Mar 26 07:29:39 PM UTC 2026: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
445f11f
Thu Mar 26 07:30:03 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/60
c0b916e
Thu Mar 26 07:33:25 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/60
65b6da3
Thu Mar 26 07:36:18 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
397fbb9
Thu Mar 26 07:40:43 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/60
3a5ec98
Thu Mar 26 07:41:11 PM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   33 |     list -> head = NULL;
      |          ^~
list.c:32:19: note: object of size 8 allocated by ‘malloc’
   32 |     List * list = malloc(sizeof(list));
      |                   ^~~~~~~~~~~~~~~~~~~~
list.c:34:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   34 |     list -> tail = NULL;
      |          ^~
list.c:32:19: note: object of size 8 allocated by ‘malloc’
   32 |     List * list = malloc(sizeof(list));
      |                   ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
58a568f
Thu Mar 26 07:42:06 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   33 |     list -> head = NULL;
      |          ^~
list.c:32:19: note: object of size 8 allocated by ‘malloc’
   32 |     List * list = malloc(sizeof(list));
      |                   ^~~~~~~~~~~~~~~~~~~~
list.c:34:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   34 |     list -> tail = NULL;
      |          ^~
list.c:32:19: note: object of size 8 allocated by ‘malloc’
   32 |     List * list = malloc(sizeof(list));
      |                   ^~~~~~~~~~~~~~~~~~~~
list.c:35:10: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   35 |     list -> current = NULL;
      |          ^~
list.c:32:19: note: object of size 8 allocated by ‘malloc’
   32 |     List * list = malloc(sizeof(list));
      |                   ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
64c7e4a
Thu Mar 26 07:42:26 PM UTC 2026: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|4
total_score: 20/60
7b1a7d8
Thu Mar 26 07:44:12 PM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
73de4b3
Thu Mar 26 07:45:11 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
80a116a
Thu Mar 26 07:45:31 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
61e68d4
Thu Mar 26 07:48:06 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e230eea
Thu Mar 26 07:49:11 PM UTC 2026: 
 tests:  0|0
07a210e
Thu Mar 26 07:50:30 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:12: error: dereferencing ‘void *’ pointer [-Werror]
   41 |     return *dato;
      |            ^~~~~
list.c:41:12: error: void value not ignored as it ought to be
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
cd61ab7
Thu Mar 26 07:50:40 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dcf8537
Thu Mar 26 07:52:23 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0cb7367
Thu Mar 26 07:53:06 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ebd828d
Thu Mar 26 07:54:24 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
37569ea
Thu Mar 26 07:54:49 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:16: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   41 |     int dato = list -> current -> data;
      |                ^~~~
list.c:42:12: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Wint-conversion]
   42 |     return dato;
      |            ^~~~
ac729bc
Thu Mar 26 07:55:35 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 25/60
0d922ef
